aura: make the EmbedRoot's window have a FocusClient

This is needed to handle focus changes correctly. The focus client in
this case is extremely minimal.

BUG=821602
TEST=covered by test

Change-Id: I6e1cbd686edf8e0080b8a21a28c3ddeae4e640a4
Reviewed-on: https://chromium-review.googlesource.com/965445
Commit-Queue: Scott Violet <sky@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#543728}
Former-commit-id: f99b42d4da45af887f3a0a6777364ce97551152f