ui/aura/test/mus/window_tree_client_private.cc
@@ -4,6 +4,8 @@
 
 #include "ui/aura/test/mus/window_tree_client_private.h"
 
+#include "base/unguessable_token.h"
+#include "ui/aura/mus/embed_root.h"
 #include "ui/aura/mus/in_flight_change.h"
 #include "ui/aura/mus/window_port_mus.h"
 #include "ui/aura/mus/window_tree_client.h"
@@ -12,6 +14,11 @@
 #include "ui/display/display.h"
 
 namespace aura {
+namespace {
+
+constexpr int64_t kDisplayId = 1;
+
+}  // namespace
 
 WindowTreeClientPrivate::WindowTreeClientPrivate(
     WindowTreeClient* tree_client_impl)
@@ -34,14 +41,10 @@ WindowTreeClientPrivate::CreateWindowTreeClient(
 }
 
 void WindowTreeClientPrivate::OnEmbed(ui::mojom::WindowTree* window_tree) {
-  ui::mojom::WindowDataPtr root_data(ui::mojom::WindowData::New());
-  root_data->parent_id = 0;
-  root_data->window_id = next_window_id_++;
-  root_data->visible = true;
-  const int64_t display_id = 1;
   const ui::Id focused_window_id = 0;
-  tree_client_impl_->OnEmbedImpl(window_tree, std::move(root_data), display_id,
-                                 focused_window_id, true, base::nullopt);
+  tree_client_impl_->OnEmbedImpl(window_tree, CreateWindowDataForEmbed(),
+                                 kDisplayId, focused_window_id, true,
+                                 base::nullopt);
 }
 
 WindowTreeHostMus* WindowTreeClientPrivate::CallWmNewDisplayAdded(
@@ -84,6 +87,14 @@ void WindowTreeClientPrivate::CallOnCaptureChanged(Window* new_capture,
 
 void WindowTreeClientPrivate::CallOnConnect() {
   tree_client_impl_->OnConnect();
+}
+
+void WindowTreeClientPrivate::CallOnEmbedFromToken(EmbedRoot* embed_root) {
+  embed_root->OnScheduledEmbedForExistingClient(
+      base::UnguessableToken::Create());
+  tree_client_impl_->OnEmbedFromToken(embed_root->token(),
+                                      CreateWindowDataForEmbed(), kDisplayId,
+                                      base::Optional<viz::LocalSurfaceId>());
 }
 
 WindowTreeHostMusInitParams
@@ -129,6 +140,14 @@ bool WindowTreeClientPrivate::HasChangeInFlightOfType(ChangeType type) {
 
 void WindowTreeClientPrivate::WaitForInitialDisplays() {
   tree_client_impl_->WaitForInitialDisplays();
+}
+
+ui::mojom::WindowDataPtr WindowTreeClientPrivate::CreateWindowDataForEmbed() {
+  ui::mojom::WindowDataPtr root_data(ui::mojom::WindowData::New());
+  root_data->parent_id = 0;
+  root_data->window_id = next_window_id_++;
+  root_data->visible = true;
+  return root_data;
 }
 
 }  // namespace aura
